main functions of calculator added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <button id = "seven">7</button>
             <button id = "eight">8</button>
             <button id = "nine">9</button>
-            <button id = "round">round</button>
+            <button id = "deg">deg</button>
             <button id = "minus">-</button>
         </div>
         <div id = "row5">
